Bug 359978 - No singular form to "seconds" string
Summary: No singular form to "seconds" string
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-02 01:43 UTC by André Marcelo Alvarenga
Modified: 2016-04-25 20:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2016-03-02 01:43:14 UTC
In Delay: field there are the string "X seconds".
If I change X to 1, the string should be "1 second".
If I change X to 0, the string could be "No delay" or similar, instead of "0 seconds"

Reproducible: Always
Comment 1 Boudhayan Gupta 2016-04-25 20:39:29 UTC
Git commit 80b8fd889f6e9ed2290ab330821b3fdbe6d2b1a1 by Boudhayan Gupta.
Committed on 25/04/2016 at 20:38.
Pushed by bgupta into branch 'master'.

Add strings for no delay and singular for seconds
FIXED-IN: 16.08

M  +3    -2    src/Gui/KSWidget.cpp
M  +15   -1    src/Gui/SmartSpinBox.cpp
M  +4    -0    src/Gui/SmartSpinBox.h

http://commits.kde.org/kscreengenie/80b8fd889f6e9ed2290ab330821b3fdbe6d2b1a1