Add strings for no delay and singular for seconds

BUG: 359978
FIXED-IN: 16.08